<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layoutLogoTitleDescriptionImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:contentDescription=""
            android:src="@mipmap/ic_logo_app_foreground"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_text_title"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:layout_marginBottom="20dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_text_description"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="center"/>

        <ImageView
            android:layout_width="340dp"
            android:layout_height="340dp"
            android:contentDescription=""
            android:src="@mipmap/ic_image_main_foreground"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/layoutLogoTitleDescriptionImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerSignUpBtn"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:text="@string/registerBtn"
            android:textColor="@color/black"
            android:padding="13sp"
            android:backgroundTint="@color/white"
            style="@style/Widget.Material3.Button.OutlinedButton"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoOtraOpcionMain"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="center"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:text="@string/loginBtn"
            android:textColor="@color/white"
            android:padding="13sp"
            android:backgroundTint="@color/black"
            style="@style/Widget.Material3.Button"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/layoutButtons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
