<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    tools:context=".ui.core.HomeFragment">

    <LinearLayout
        android:id="@+id/layoutUI"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:id="@+id/layoutUsernameImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/homeIconProfile"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:src="@mipmap/ic_patient_line_icon_foreground"
                app:tint="@color/white"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical"
                android:layout_marginStart="5dp">

                <TextView
                    android:id="@+id/homeMessageUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/textGoodMorningMain"/>

                <TextView
                    android:id="@+id/homeFirstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMaterialCardViewHome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutUI">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/materialCardVIewNewDate"
                    android:clickable="true"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_black"
                    android:layout_marginBottom="20dp"
                    app:cardElevation="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:src="@mipmap/ic_dental_tooth_with_clock_foreground"
                        app:tint="@color/white"/>

                    <LinearLayout
                        android:id="@+id/layoutTextAndTextDescriptionAppointment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        android:layout_marginEnd="50dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/textNewDate"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_marginBottom="5dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/textDescriptionNewDate"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_marginTop="5dp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/materialCardVIewDates"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_pink"
                    app:cardElevation="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:src="@mipmap/ic_dental_checklist_foreground"
                        app:tint="@color/white"/>

                    <LinearLayout
                        android:id="@+id/layoutTextAndTextDescriptionScheedle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        android:layout_marginEnd="50dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/textYourSchedules"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_marginBottom="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/textDescriptionYourSchedules"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_marginTop="5dp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>